@@ -12,6 +12,9 @@ Version 199.1:
  * Added *?, +?, and ?? (non-greedy operators) to regexp,
    and fixed potential stack overflow.
 
+ * Changed `raise-type-error' to accept an argument index and
+   list of all arguments.
+
 Version 103.5:
 
  * Fixed a memory bug in the run-time support for mzc-compiled code.
